[project]
name = "dev-utils"
version = "0.1.0"
description = ""
authors = [{name = "karthik", email = "karthikkannan@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "invoke>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
