[project]
name = "dev-utils"
version = "0.1.0"
description = ""
authors = [{ name = "karthik", email = "karthikkannan@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "invoke>=1.7.1",
    "pyjwt[crypto]>=2.10.1",
    "click>=8.1",
]

[project.scripts]
jwt-decode = "jwt_util:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `sources` defines where to search from, and `only-include` lists files or top-levels to include
sources = ["src"]
only-include = ["jwt_util.py"]
