[project]
name = "dev-utils"
version = "0.1.0"
description = ""
authors = [{ name = "karthik", email = "karthikkannan@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "invoke>=1.7.1",
    "pyjwt[crypto]>=2.10.1",
    "click>=8.1",
]

[project.scripts]
jwt-decode = "jwt_util:cli"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["jwt_util"]

[tool.setuptools.package-dir]
"" = "src"
